--- a/FDS 230701251/Exp-11.ipynb
+++ b/FDS 230701251/Exp-11.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "#NRAGHUL R\n",
+    "#RAGHUL R\n",
     "#230701251\n",
     "# Import necessary libraries\n",
     "import numpy as np\n",
